image fix on mobile

--- a/app/assets/stylesheets/mobile/layout.scss
+++ b/app/assets/stylesheets/mobile/layout.scss
@@ -421,7 +421,7 @@ footer {
 	.inner {
 		.img_mask {
 			width: 100%;
-			height: 140px;
+			height: 240px;
 			overflow-y: hidden;
 			transition: height 0.3s linear;
 
